--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ body {
 .databar {
    background-color: #444;
    color: #AAA;
+   padding: 0 0.1em;
 }
 a:hover { 
    color: inherit; 
@@ -43,7 +44,7 @@ a:hover {
 }
 #right-pane-footer {
    font-size: 0.7em;
-   padding: 0 1em;
+   padding: 0 0.5em;
 }
 #nav-user-avatar {
    border-radius: 50rem;
@@ -272,13 +273,15 @@ function setupDebugLog()
    tracking is mostly for easy access to pages you've previously visited.
                   </p>
                   <h3 class="uk-heading-divider"><span>Technology/Credits</span></h3>
-                  <p><a target="_blank" href="https://getuikit.com/">UIkit</a></p>
-                  <p><a target="_blank" href="https://docs.microsoft.com/en-us/aspnet/core/">ASP.NET Core</a></p>
-                  <p>And a big thank you to: Yttria, 12me21, MasterR3C0RD, many
-                  more (please let me know if you want to be in this list)</p>
-                  <h3 class="uk-heading-divider"><span>Contact</span></h3>
-                  <h4>General contact:</h4>smilebasicsource@gmail.com
-                  <h4>Domain holder / Website Admin:</h4> Carlos Sanchez / randomous
+   <p><a target="_blank" href="https://getuikit.com/">UIkit</a></p>
+   <p><a target="_blank" href="https://docs.microsoft.com/en-us/aspnet/core/">ASP.NET Core</a></p>
+   <p><a target="_blank" href="https://github.com/randomouscrap98/newsbs">Frontend Repo</a></p>
+   <p><a target="_blank" href="https://github.com/randomouscrap98/contentapi">API Repo</a></p>
+   <p>And a big thank you to: Yttria, 12me21, MasterR3C0RD, many
+   more (please let me know if you want to be in this list)</p>
+   <h3 class="uk-heading-divider"><span>Contact</span></h3>
+   <h4>General contact:</h4>smilebasicsource@gmail.com
+   <h4>Domain holder / Website Admin:</h4> Carlos Sanchez / randomous
                   </p>
                </div>
             </div>
