In the middle of user crap

--- a/index.html
+++ b/index.html
@@ -120,7 +120,15 @@
                      </div>
                   </li>
                   <!-- LOC:USER -->
-                  <li>User-logged-in</li>
+                  <li>
+                     <div class="uk-container" uk-margin>
+                        <div id="userdata" class="uk-padding-small">
+                           <h2 uk-tooltip="" id="userusername"></h2>
+                           <!--<span id="userid" class="uk-label"></span>-->
+                           <button id="userlogout" class="uk-button uk-button-default">Logout</button>
+                        </div>
+                     </div>
+                  </li>
                   <!-- LOC:ACTIVITY -->
                   <li>list</li>
                   <!-- LOC:WATCHES -->
