Added invalidate tokens

--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
                            <hr>
                            <a href="" id="userchangeavatar" uk-toggle="target: #fileupload" 
                               class="uk-display-block">Change Avatar</a>
+                           <a href="#" id="userinvalidatesessions" 
+                              class="uk-display-block">Invalidate All Sessions</a>
                            <button id="userlogout" class="uk-button uk-button-default">Logout</button>
                         </div>
                      </div>
