--- a/index.html
+++ b/index.html
@@ -69,9 +69,10 @@
                </div>
                <!-- LOC:RIGHTPANECONTENT -->
                <ul id="rightpanecontent" class="uk-switcher uk-flex-1" uk-overflow-auto>
-                  <!-- LOC:USERLOGIN -->
+                  <!-- LOC:USERNEW -->
                   <li>
                      <div class="uk-container" uk-margin>
+                        <!-- LOC:USERLOGIN -->
                         <form id="loginform" class="uk-padding-small" onsubmit="return false">
                            <fieldset class="uk-fieldset" uk-margin>
                               <legend class="uk-legend">Login</legend>
@@ -84,9 +85,12 @@
                            </fieldset>
                         </form>
                         <hr>
-                        <form id="registerform" class="uk-padding-small" onsubmit="return false">
-                           <fieldset class="uk-fieldset" uk-margin>
-                              <legend class="uk-legend">Register</legend>
+                        <!-- LOC:REGISTER -->
+                        <ul id="registrationswitcher" class="uk-switcher">
+                           <li>
+                              <form id="registerform" class="uk-padding-small" onsubmit="return false">
+                                 <fieldset class="uk-fieldset" uk-margin>
+                                    <legend class="uk-legend">Register</legend>
       <!-- Once again shifted over for convenience -->
       <input class="uk-input" name="username" type="text" placeholder="Username">
       <input class="uk-input" name="email" type="email" placeholder="Email">
@@ -95,28 +99,77 @@
       <div class="uk-inline">
       <input type="submit" value="Register" class="uk-button uk-button-primary">
       </div>
-                           </fieldset>
-                        </form>
-                        <form id="resendemailform" class="uk-padding-small" onsubmit="return false">
-                           <fieldset class="uk-fieldset" uk-margin>
-                              <legend class="uk-legend">Resend Confirmation</legend>
-      <!-- Once again shifted over for convenience -->
-      <input class="uk-input" name="email" type="email" placeholder="Email">
-      <div class="uk-inline">
-      <input type="submit" value="Resend email" class="uk-button uk-button-primary">
-      </div>
-                           </fieldset>
-                        </form>
-                        <form id="confirmemailform" class="uk-padding-small" onsubmit="return false">
-                           <fieldset class="uk-fieldset" uk-margin>
-                              <legend class="uk-legend">Confirm Account</legend>
+                                 </fieldset>
+                              </form>
+                           </li>
+                           <li>
+                              <form id="confirmemailform" class="uk-padding-small" onsubmit="return false">
+                                 <fieldset class="uk-fieldset" uk-margin>
+                                    <legend class="uk-legend">Confirm Account</legend>
       <!-- Once again shifted over for convenience -->
       <input class="uk-input" name="username" type="text" placeholder="Confirmation Code">
       <div class="uk-inline">
       <input type="submit" value="Confirm Account" class="uk-button uk-button-primary">
       </div>
-                           </fieldset>
-                        </form>
+                                 </fieldset>
+                              </form>
+                           </li>
+                           <li>
+                              <form id="resendemailform" class="uk-padding-small" onsubmit="return false">
+                                 <fieldset class="uk-fieldset" uk-margin>
+                                    <legend class="uk-legend">Resend Confirmation</legend>
+      <!-- Once again shifted over for convenience -->
+      <input class="uk-input" name="email" type="email" placeholder="Email">
+      <div class="uk-inline">
+      <input type="submit" value="Resend email" class="uk-button uk-button-primary">
+      </div>
+                                 </fieldset>
+                              </form>
+                           </li>
+                        </ul>
+                        <ul class="uk-tab-bottom uk-flex-center"
+                           uk-tab="connect: #registrationswitcher; 
+                           animation: uk-animation-slide-right-medium, uk-animation-slide-left-medium">
+                           <li><a href="#">Step 1</a></li>
+                           <li><a href="#">Step 2</a></li>
+                           <li><a href="#">Resend Email</a></li>
+                        </ul>
+                        <!--<hr>-->
+                        <!-- LOC:PASSWORDRECOVER -->
+                        <ul id="passwordresetswitcher" class="uk-switcher">
+                           <li>
+                              <form id="passwordresetform" class="uk-padding-small" onsubmit="return false">
+                                 <fieldset class="uk-fieldset" uk-margin>
+                                    <legend class="uk-legend">Password Reset</legend>
+      <!-- Once again shifted over for convenience -->
+      <input class="uk-input" name="email" type="email" placeholder="Account Email">
+      <div class="uk-inline">
+      <input type="submit" value="Send email" class="uk-button uk-button-primary">
+      </div>
+                                 </fieldset>
+                              </form>
+                           </li>
+                           <li>
+                              <form id="passwordresetconfirmform" class="uk-padding-small" onsubmit="return false">
+                                 <fieldset class="uk-fieldset" uk-margin>
+                                    <legend class="uk-legend">Password Reset Confirm</legend>
+      <!-- Once again shifted over for convenience -->
+      <input class="uk-input" name="resetKey" type="text" placeholder="Code">
+      <input class="uk-input" name="password" type="password" placeholder="New Password">
+      <input class="uk-input" name="password2" type="password" placeholder="Confirm New Password">
+      <div class="uk-inline">
+      <input type="submit" value="Reset Password" class="uk-button uk-button-primary">
+      </div>
+                                 </fieldset>
+                              </form>
+                           </li>
+                        </ul>
+                        <ul class="uk-tab-bottom uk-flex-center"
+                           uk-tab="connect: #passwordresetswitcher; 
+                           animation: uk-animation-slide-right-medium, uk-animation-slide-left-medium">
+                           <li><a href="#">Step 1</a></li>
+                           <li><a href="#">Step 2</a></li>
+                        </ul>
                      </div>
                   </li>
                   <!-- LOC:USER -->
